<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/trans_black">

    <LinearLayout
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_120sdp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:background="@color/colortheme_white">

         <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exitapp"
            android:textStyle="bold"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/colortheme_black"
            android:gravity="center"
             android:fontFamily="@font/poppins_medium"
             android:includeFontPadding="false"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_10sdp">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:text="@string/cancel"
                android:textColor="@color/colortheme_black"
                android:gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:layout_marginRight="@dimen/_5sdp"
                android:textSize="@dimen/_13sdp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/tv_exit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:text="@string/exit1"
                android:textColor="@color/colortheme_white"
                android:gravity="center"
                android:textSize="@dimen/_13sdp"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:layout_marginLeft="@dimen/_5sdp"
                android:background="@drawable/box_radi_solid"
                android:layout_weight="1"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>