<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/trans_black">

    <LinearLayout
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:background="@color/colortheme_white">

         <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/needhelp"
            android:textStyle="bold"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/colortheme_black"
            android:gravity="center"
             android:fontFamily="@font/poppins_medium"
             android:includeFontPadding="false"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_20sdp"
            android:orientation="vertical"
            >

            <LinearLayout
                android:id="@+id/ll_hint1"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/box_radi_solid"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_13sdp"
                    android:layout_height="@dimen/_13sdp"
                    android:src="@drawable/ic_player"
                    android:tint="@color/colortheme_white"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/watchad"
                    android:textColor="@color/colortheme_white"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/_7sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:includeFontPadding="false"
                    android:layout_marginLeft="@dimen/_5sdp"
                    />

                <TextView
                    android:id="@+id/tv_restart"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/hint"
                    android:fontFamily="@font/poppins_medium"
                    android:includeFontPadding="false"
                    android:textColor="@color/colortheme_white"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/_11sdp"
                    android:layout_marginLeft="@dimen/_2sdp"
                   />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_solution"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/box_radi_solid"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_13sdp"
                    android:layout_height="@dimen/_13sdp"
                    android:src="@drawable/ic_player"
                    android:tint="@color/colortheme_white"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/watchad"
                    android:textColor="@color/colortheme_white"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/_7sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:includeFontPadding="false"
                    android:layout_marginLeft="@dimen/_5sdp"
                    />

                <TextView
                    android:id="@+id/tv_adsetting"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/solution"
                    android:textColor="@color/colortheme_white"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/_11sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:includeFontPadding="false"
                    android:layout_marginLeft="@dimen/_2sdp"
                    />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_close"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/nothanks"
            android:textColor="@color/colortheme_black"
            android:gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:textSize="@dimen/_11sdp"
            android:layout_marginTop="@dimen/_10sdp"
            />

    </LinearLayout>

</LinearLayout>