<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/colortheme_white">

    <LinearLayout
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        >

        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:src="@drawable/ic_right"
            android:tint="@color/colortheme_black"
            android:layout_gravity="center" />

         <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/correct"
            android:textStyle="bold"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/colortheme_black"
            android:gravity="center"
             android:fontFamily="@font/poppins_medium"
             android:includeFontPadding="false"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tv_privacypolicy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/refernextlevel"
            android:textColor="@color/colortheme_black"
            android:gravity="center"
            android:textSize="@dimen/_10sdp"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:layout_marginTop="@dimen/_5sdp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:orientation="vertical"
            >

            <LinearLayout
                android:id="@+id/ll_nextlevel"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/box_radi_solid"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_13sdp"
                    android:layout_height="@dimen/_13sdp"
                    android:src="@drawable/ic_play"
                    android:tint="@color/colortheme_white"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/tv_restart"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/nextlevel"
                    android:textColor="@color/colortheme_white"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/_11sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:includeFontPadding="false"
                    android:layout_marginLeft="@dimen/_5sdp"
                   />


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>