<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.ActivitySelectLanguage">

    <RelativeLayout
        android:id="@+id/rl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/toolbar_background">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_back"
            android:tint="@color/colortheme_text_onblack"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:text="@string/selectlanguage"
            android:textColor="@color/colortheme_text_onblack"
            android:textSize="20dp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ll_english"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/box_radi_border_grey">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="30dp"
                            android:src="@drawable/ic_language"
                            android:tint="@color/colortheme_white"/>

                        <TextView
                            android:id="@+id/tv_english"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/english"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"
                            android:layout_marginLeft="20dp"
                            android:textSize="17dp"
                            android:textColor="@color/colortheme_white"
                            android:textStyle="bold"/>


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_hindi"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/box_radi_border_grey"
                        android:layout_marginTop="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="30dp"
                            android:src="@drawable/ic_language"
                            android:tint="@color/colortheme_white"/>

                        <TextView
                            android:id="@+id/tv_hindi"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/hindi"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"
                            android:layout_marginLeft="20dp"
                            android:textSize="17dp"
                            android:textColor="@color/colortheme_white"
                            android:textStyle="bold"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_spanish"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/box_radi_border_grey"
                        android:layout_marginTop="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="30dp"
                            android:src="@drawable/ic_language"
                            android:tint="@color/colortheme_white"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/spanish"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"
                            android:layout_marginLeft="20dp"
                            android:textSize="17dp"
                            android:textColor="@color/colortheme_white"
                            android:textStyle="bold"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_portugese"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/box_radi_border_grey"
                        android:layout_marginTop="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="30dp"
                            android:src="@drawable/ic_language"
                            android:tint="@color/colortheme_white"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/portugese"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"
                            android:layout_marginLeft="20dp"
                            android:textSize="17dp"
                            android:textColor="@color/colortheme_white"
                            android:textStyle="bold"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_indonesian"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/box_radi_border_grey"
                        android:layout_marginTop="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="30dp"
                            android:src="@drawable/ic_language"
                            android:tint="@color/colortheme_white"/>

                        <TextView
                            android:id="@+id/tv_indonesian"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/indonesian"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"
                            android:layout_marginLeft="20dp"
                            android:textSize="17dp"
                            android:textColor="@color/colortheme_white"
                            android:textStyle="bold"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_turkish"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/box_radi_border_grey"
                        android:layout_marginTop="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="30dp"
                            android:src="@drawable/ic_language"
                            android:tint="@color/colortheme_white"/>

                        <TextView
                            android:id="@+id/tv_turkish"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/turkish"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"
                            android:layout_marginLeft="20dp"
                            android:textSize="17dp"
                            android:textColor="@color/colortheme_white"
                            android:textStyle="bold"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_japanese"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/box_radi_border_grey"
                        android:layout_marginTop="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="30dp"
                            android:src="@drawable/ic_language"
                            android:tint="@color/colortheme_white"/>

                        <TextView
                            android:id="@+id/tv_japanese"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/japanese"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"
                            android:layout_marginLeft="20dp"
                            android:textSize="17dp"
                            android:textColor="@color/colortheme_white"
                            android:textStyle="bold"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_german"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/box_radi_border_grey"
                        android:layout_marginTop="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="30dp"
                            android:src="@drawable/ic_language"
                            android:tint="@color/colortheme_white"/>

                        <TextView
                            android:id="@+id/tv_german"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/german"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"
                            android:layout_marginLeft="20dp"
                            android:textSize="17dp"
                            android:textColor="@color/colortheme_white"
                            android:textStyle="bold"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_italian"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/box_radi_border_grey"
                        android:layout_marginTop="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="30dp"
                            android:src="@drawable/ic_language"
                            android:tint="@color/colortheme_white"/>

                        <TextView
                            android:id="@+id/tv_italian"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/italian"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"
                            android:layout_marginLeft="20dp"
                            android:textSize="17dp"
                            android:textColor="@color/colortheme_white"
                            android:textStyle="bold"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_thai"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/box_radi_border_grey"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="@dimen/_20sdp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="30dp"
                            android:src="@drawable/ic_language"
                            android:tint="@color/colortheme_white"/>

                        <TextView
                            android:id="@+id/tv_thai"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/thai"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"
                            android:layout_marginLeft="20dp"
                            android:textSize="17dp"
                            android:textColor="@color/colortheme_white"
                            android:textStyle="bold"/>

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

        </RelativeLayout>


    </RelativeLayout>

</LinearLayout>